--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,47 @@ a {
     display: none;
   }
 
+  .header .inner-menu[show="yes"] {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    text-align: left;
+  }
+
+  .header .inner-menu[show="yes"] ul {
+    flex-direction: column;
+    gap: 20px;
+    width: 250px;
+    background-color: white;
+    padding: 20px;
+    height: 100%;
+    position: relative;
+    z-index: 1;
+  }
+
+  .header .inner-menu[show="yes"] .inner-overlay {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #0000004f;
+    cursor: pointer;
+  }
+
+  .header .inner-menu[show="yes"] .inner-overlay i {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    color: white;
+    cursor: pointer;
+  }
+
   .header .inner-menu-mobile {
     display: inline-block;
     display: inline-block;
